--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
 					<!-- </div> -->
 				</div>
                 <div class="youtube">
-                    <!-- <iframe width="640" height="360" src="https://www.youtube.com/embed/puxFxDLrBaQ" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+                    <iframe width="640" height="360" src="https://www.youtube.com/embed/puxFxDLrBaQ" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="otherVideo">
 					<a href="preparing_page.html">Other Video</a>
